Thu Nov 19 13:57:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (finish_overlapped_socket): ignore EMSGSIZE when input,
	  because POSIX platforms just do so.  fixes test errors revealed by
	  r52647.

Thu Nov 19 02:52:30 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): stretch the buffer size
	  only when vmaxdatlen is nil.

Thu Nov 19 02:20:11 2015  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_udp_recvmsg_truncation): rflags is
	  nil on Solaris 10 which have no HAVE_STRUCT_MSGHDR_MSG_CONTROL.
	  Reported by Naohisa Goto. [ruby-core:71557] [Bug #11709]

Thu Nov 19 01:48:05 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in: add -static-libgcc for mingw automatically if available.

Thu Nov 19 00:53:26 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/extmk.rb (--extflags): new option to pass EXTLDFLAGS to children,
	  especially exts.mk.

	* common.mk (EXTMK_ARGS): use above option.

Wed Nov 18 22:50:43 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_class_clear_method_cache): should clear all
	  RCLASS_CALLABLE_M_TBLs of all sub-classes (T_ICLASS).

	  RCLASS_CALLABLE_M_TBL() caches complemented method entries.
	  It should be cleared when the modules are cleared.
	  On previous version clears only for direct children.
	  It is enough for normal modules because corresponding T_ICLASSes
	  are direct children.

	  However, refinements create complex data structure. So that
	  we need to clear all children (and descendants).
	  [ruby-core:71423] [Bug #11672]

	* vm_method.c (rb_clear_method_cache_by_class): rb_mKernel
	  doesn't call rb_class_clear_method_cache, so that
	  clear child T_ICLASSes.

	* test/ruby/test_refinement.rb: enable disabled test.

Wed Nov 18 21:09:08 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (prepare_callable_method_entry): use
	  RCLASS_CALLABLE_M_TBL() instead of accessing a filed directly.
