@@ -1,3 +1,10 @@
+Thu Nov 19 14:12:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (iseq_tailcall_optimize): apply tail call optimization
+	  before conversion to specialized instructions.  when looking
+	  back from `leave` instruction, `send` instructions have been
+	  translated already.
+
 Thu Nov 19 13:57:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (finish_overlapped_socket): ignore EMSGSIZE when input,
